# encoding

./: main.py  pyproject.toml  show.py
core/generator/: utils.py
core/parser/: utils.py
forms/: main.ui
gui/: functions.py  gui.py
gui/forms/: main.py  mainV0.1.ui
