[tool.poetry]
name = "encoding"
version = "0.1.0"
description = ""
authors = ["Hamza Qureshi <hamza7771.861@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyqt6 = "^6.8.0"
pycryptodome = "^3.21.0"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
